--- a/etl-web/.settings/org.eclipse.wst.common.component
+++ b/etl-web/.settings/org.eclipse.wst.common.component
@@ -2,7 +2,10 @@
 <project-modules id="moduleCoreId" project-version="1.5.0">
   <wb-module deploy-name="${module}">
     <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/java"/>
-    <property name="java-output-path" value="/${module}/target/www/WEB-INF/classes"/>
+        <wb-resource deploy-path="/" source-path="/target/m2e-wtp/web-resources"/>
+        <wb-resource deploy-path="/" source-path="/src/main/webapp" tag="defaultRootSource"/>
+        <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/resources"/>
         <property name="context-root" value="etl-web"/>
+        <property name="java-output-path" value="/etl-web/target/etl-web-0.0.1-SNAPSHOT/WEB-INF/classes"/>
   </wb-module>
 </project-modules>
